TOUR-24 UI-Tournament

--- a/client/src/app/@auth/components/login/login.component.scss
+++ b/client/src/app/@auth/components/login/login.component.scss
@@ -6,11 +6,10 @@
 	align-items: center;
 	height: 100vh;
 	width: 100%;
-	background-color: $primary;
+	background-color: $primary-dark;
 }
 
 .login {
-	border: 1px solid $primary;
 	border-radius: 12px;
 	padding: 40px 50px;
 	width: 500px;
