--- a/client/src/app/pages/layout/footer/footer.component.html
+++ b/client/src/app/pages/layout/footer/footer.component.html
@@ -1,15 +1,15 @@
-<div class="container my-5">
+<div class="container my-3">
 	<!-- Footer -->
 	<footer
 		class="text-center text-lg-start text-white"
-		style="background-color: #1c2331">
+		style="background-color: #2c3f52">
 		<!-- Section: Social media -->
 		<section
 			class="d-flex justify-content-between p-4"
-			style="background-color: #5e2fdf">
+			style="background-color: #1b2733">
 			<!-- Left -->
 			<div class="me-5">
-				<span>CREATE TOURNAMENT by Ngơ Ngơ</span>
+				<h4>CREATE TOURNAMENT by Ngơ Ngơ</h4>
 			</div>
 			<!-- Left -->
 
