--- a/client/src/app/pages/layout/footer/footer.component.scss
+++ b/client/src/app/pages/layout/footer/footer.component.scss
@@ -1,15 +1,14 @@
-$primary-dark: #5722ea;
-$primary: #7c4dff;
-$primary-medium: #5e2fdf;
-$primary-light: #9873fd;
-$primary-ultra-light: #bea6ff;
-$primary-active: #14b8e1;
+@import "../../../shared/variable.scss";
+
+* {
+	padding: 0;
+}
 
 .social-media {
 	i {
 		transition: 0.1s ease-in-out;
 	}
 	i:hover {
-		color: $primary-dark;
+		color: $primary;
 	}
 }
