--- a/client/src/app/@auth/components/restore-password/restore-password.component.scss
+++ b/client/src/app/@auth/components/restore-password/restore-password.component.scss
@@ -1,4 +1,4 @@
-$primary: #7c4dff;
+@import "../../../shared/variable.scss";
 
 a {
 	text-decoration: none;
@@ -9,11 +9,10 @@ a {
 	align-items: center;
 	height: 100vh;
 	width: 100%;
-	background-color: $primary;
+	background-color: $primary-dark;
 }
 
 .restore-password {
-	border: 1px solid $primary;
 	border-radius: 12px;
 	padding: 40px 50px;
 	width: 500px;
