--- a/client/src/app/pages/home/home.component.scss
+++ b/client/src/app/pages/home/home.component.scss
@@ -1,27 +1,113 @@
 @import "../../shared/variable.scss";
 
+body {
+	background-color: black;
+}
+
+h2 {
+	font-size: 40px;
+	text-align: center;
+	color: white;
+	text-transform: uppercase;
+}
+
 .home {
 	&--wrapper {
 		padding-top: 76px;
 		box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+		padding-left: 0;
+		padding-right: 0;
 	}
 
-	&--video {
+	&--introduce {
+		height: 300px;
 		display: flex;
 		align-items: center;
-		justify-content: center;
+		flex-direction: column;
 		padding: 24px;
+		background-color: $primary-dark;
+		color: white;
+
+		.input-focus-effect {
+			width: 500px;
+		}
+
+		.search {
+			display: flex;
+			align-items: center;
+		}
+
+		.search-btn {
+			padding: 4px;
+			background-color: $primary;
+			height: 100%;
+			width: 40px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-top-right-radius: 8px;
+			border-bottom-right-radius: 8px;
+
+			i {
+				transition: 0.2s ease-in-out;
+			}
+			&:hover i {
+				transform: scale(120%);
+			}
+		}
 	}
 
 	&--info {
+		margin-top: 24px;
 		min-height: 300px;
 		background-color: $primary-medium;
 		padding: 24px;
-		h2 {
-			font-size: 40px;
-			text-align: center;
-			color: white;
-			text-transform: uppercase;
+	}
+
+	&--guide {
+		margin-top: 24px;
+		min-height: 400px;
+		background-color: $primary-medium;
+		padding: 24px;
+
+		.list--card {
+			padding: 12px 0;
 		}
+
+		.guide--card {
+			height: 100px;
+			padding: 24px 8px;
+			background-color: $primary-light;
+			position: relative;
+			box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+			border: 2px solid white;
+
+			span {
+				position: absolute;
+				content: "";
+				top: 0;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				background-color: $primary;
+				border-radius: 50%;
+				border: 2px solid white;
+				padding: 7px 16px;
+				font-weight: 500;
+				font-size: 18px;
+				color: white;
+			}
+			p {
+				color: white;
+				font-weight: 450;
+				text-align: center;
+			}
+		}
+	}
+
+	&--tour-list {
+		margin-top: 24px;
+		min-height: 400px;
+		background-color: $primary-medium;
+		padding: 24px;
 	}
 }
