--- a/client/src/app/pages/layout/header/header.component.scss
+++ b/client/src/app/pages/layout/header/header.component.scss
@@ -1,11 +1,12 @@
 @import "../../../shared/variable.scss";
 
 #header {
-	background-color: $primary;
+	background-color: $primary-dark;
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
+	z-index: 999;
 }
 
 .navbar-brand {
@@ -15,8 +16,13 @@
 	color: white;
 	font-size: 16px;
 	font-weight: 450;
+	transition: 0.2s ease-in-out;
 	i {
 		font-size: 25px;
+	}
+
+	&:hover {
+		color: $primary;
 	}
 }
 
@@ -32,17 +38,18 @@
 	}
 	.tab-active {
 		transition: ease-in-out 0.5s;
-		border-bottom: 1px solid white;
+		border-bottom: 2px solid $primary;
 	}
 	.menu--item {
 		font-size: $text-size;
 		list-style: none;
 		font-weight: 450;
 		cursor: pointer;
-		transition: 0.1s ease-in;
+		transition: 0.2s ease-in;
 		position: relative;
 		&:hover {
 			transform: scale(105%);
+			border-bottom: 2px solid $primary;
 		}
 	}
 }
@@ -72,19 +79,17 @@
 		margin-right: 12px;
 		&:hover {
 			transform: scale(105%);
-			color: $primary;
-			background-color: white;
+			// color: white;
+			// background-color: $primary;
 		}
 	}
 	a:nth-child(2) {
-		background-color: $primary-dark;
+		background-color: $primary;
 		color: white;
 		font-size: $text-size;
 		margin-right: 12px;
 		&:hover {
 			transform: scale(105%);
-			background-color: white;
-			color: $primary;
 		}
 	}
 }
@@ -98,7 +103,7 @@
 	color: white;
 	cursor: pointer;
 	&:hover {
-		background-color: $primary-dark;
+		background-color: $primary;
 	}
 	&:hover ~ .user-dropdown {
 		display: block;
@@ -119,19 +124,26 @@
 	top: 58px;
 	right: 24px;
 	z-index: 5;
-	background-color: white;
-	box-shadow: 1px 1px 1px 1px rgb(225, 225, 225);
+	background-color: $primary-medium;
+
+	// box-shadow: 1px 1px 1px 1px rgb(225, 225, 225);
 	animation: showToptoBot 0.3s;
-	border-radius: 8px;
+	border-radius: 4px;
 	overflow: hidden;
 	.dropdown--item {
+		color: white;
 		padding: 8px 12px;
 		list-style: none;
 		border-bottom: 1px solid rgb(223, 223, 223);
 		transition: 0.15s ease-in;
 		cursor: pointer;
 		&:hover {
-			background-color: #f0f0f0;
+			color: white;
+			background-color: $primary;
+		}
+
+		&:last-child {
+			border: 0px;
 		}
 	}
 	&.show {
@@ -156,10 +168,10 @@
 	li {
 		font-size: $text-size;
 		text-decoration: none;
-		color: $primary-ultra-light;
+		color: #fff;
 	}
 	.tab-active {
-		color: $primary-active;
+		color: #cecece;
 	}
 	.menu--item {
 		padding: 12px 8px;
@@ -170,24 +182,8 @@
 		transition: 0.1s ease-in;
 		border-bottom: 1px solid black;
 		&:hover {
-			color: $primary-active;
+			color: #cecece;
 		}
-	}
-}
-
-// Animation
-@keyframes showToptoBot {
-	0% {
-		height: 0;
-	}
-	25% {
-		height: 20px;
-	}
-	50% {
-		height: 40px;
-	}
-	100% {
-		height: 60px;
 	}
 }
 
