--- a/client/src/app/shared/components/card-info/card-info.component.scss
+++ b/client/src/app/shared/components/card-info/card-info.component.scss
@@ -1,6 +1,8 @@
 @import "../../../shared/variable.scss";
 .card {
 	&--info {
+		border-radius: 8px;
+		overflow: hidden;
 		width: 100%;
 		height: 100%;
 		background-color: white;
@@ -12,7 +14,7 @@
 	&--header {
 		width: 100%;
 		text-align: center;
-		background-color: $primary-light;
+		background-color: $primary;
 		display: flex;
 		align-items: center;
 		gap: 12px;
