--- a/client/src/app/shared/variable.scss
+++ b/client/src/app/shared/variable.scss
@@ -1,17 +1,117 @@
-$primary-dark: #5722ea;
-$primary: #7c4dff;
-$primary-medium: #5e2fdf;
-$primary-light: #9873fd;
-$primary-ultra-light: #bea6ff;
-$primary-active: #14b8e1;
-
+$primary-dark: #1b2733;
+$primary: #e74c3c;
+$primary-medium: #2c3f52;
+$primary-light: #43515e;
 $text-size: 16px;
 * {
 	text-decoration: none;
 }
+p,
 ul,
 ol {
 	margin: 0;
 	padding: 0;
 	list-style: none;
+}
+
+body {
+	background-color: $primary-light;
+}
+
+// Animation search input
+.input-focus-effect {
+	position: relative;
+	display: flex;
+	flex-direction: column-reverse;
+}
+
+.input-focus-effect input {
+	padding: 25px 10px 10px;
+	border: 1px solid $primary;
+	border-right-width: 0px;
+	display: block;
+	width: 100%;
+	border-top-left-radius: 8px;
+	border-bottom-left-radius: 8px;
+	transition: border 0.25s linear;
+	background-color: transparent;
+	outline: none;
+	color: white;
+	font-size: 14px;
+}
+
+.input-focus-effect input:focus {
+	border-color: $primary;
+}
+
+.input-focus-effect input:focus + label,
+.input-focus-effect input:not(:placeholder-shown) + label {
+	transform: translateY(-25px);
+	background-color: $primary-dark;
+
+	top: 10px;
+}
+
+.input-focus-effect label {
+	position: absolute;
+	top: 50%;
+	left: 10px;
+	transform: translateY(-50%);
+	pointer-events: none;
+	color: white;
+	transition: 0.25s linear;
+	font-size: 16px;
+	padding: 2px 4px;
+}
+
+@keyframes rotate {
+	0% {
+		transform: rotate(45);
+	}
+	25% {
+		transform: rotate(90);
+	}
+	50% {
+		transform: rotate(135);
+	}
+	75% {
+		transform: rotate(175);
+	}
+	100% {
+		transform: rotate(360);
+	}
+}
+
+// Animation
+@keyframes showToptoBot {
+	0% {
+		height: 0;
+	}
+	25% {
+		height: 20px;
+	}
+	50% {
+		height: 40px;
+	}
+	100% {
+		height: 60px;
+	}
+}
+
+@keyframes leftToRight {
+	0% {
+		width: 0;
+	}
+	25% {
+		width: 25%;
+	}
+	50% {
+		width: 50%;
+	}
+	75% {
+		width: 75%;
+	}
+	100% {
+		width: 100%;
+	}
 }
