--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import "./app/shared/variable.scss";
 html,
 body {
 	height: 100%;
@@ -7,4 +7,15 @@ body {
 body {
 	margin: 0;
 	font-family: "Roboto", "Helvetica Neue", sans-serif;
+}
+body::-webkit-scrollbar {
+	width: 4px;
+}
+
+body::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: $primary;
 }
