--- a/client/src/app/pages/layout/header/header.component.scss
+++ b/client/src/app/pages/layout/header/header.component.scss
@@ -30,9 +30,9 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	gap: 40px;
 	height: 60px;
 	li {
+		margin-left: 40px;
 		font-size: $text-size;
 		color: white;
 	}
