--- a/client/src/app/shared/components/dropdown/dropdown.component.scss
+++ b/client/src/app/shared/components/dropdown/dropdown.component.scss
@@ -2,7 +2,7 @@
 .dropdown {
 	background-color: $primary-medium;
 	color: white;
-
+	min-width: 200px;
 	&--select {
 		display: flex;
 		align-items: center;
