--- a/client/src/app/pages/create-tournament/create-tournament.component.html
+++ b/client/src/app/pages/create-tournament/create-tournament.component.html
@@ -8,11 +8,12 @@
 			<h4>Tạo giải đấu cho bạn</h4>
 			<p>Miễn phí và dễ dàng quản lý</p>
 		</div>
-		<div class="create--info mt-4">
-			<div class="create--input-name">
+		<form [formGroup]="createTour" class="create--info mt-4">
+			<div class="create--input-name form-group">
 				<div class="text-field">
 					<label for="tourName">Tên giải đấu</label>
 					<input
+						formControlName="tourName"
 						autocomplete="off"
 						type="text"
 						id="tourName"
@@ -28,16 +29,18 @@
 							onReceiveValueSportType($event)
 						"></app-dropdown>
 				</div>
-				<div class="select--format mt-3">
+				<div class="select--format mt-3 form-group">
 					<p>Chọn thể thức thi đấu</p>
 					<div
-						class="form-check mt-2"
-						*ngFor="let item of formatTypeNameList">
+						class="form-check mt-2 form-group"
+						*ngFor="let item of formatTypeNameList; index as i">
 						<input
+							formControlName="format"
 							class="form-check-input"
 							type="radio"
 							name="format"
-							id="format" />
+							id="format"
+							value="{{ i }}" />
 						<label class="form-check-label" for="format">
 							{{ item }}
 						</label>
@@ -52,8 +55,8 @@
 						"></app-dropdown>
 				</div>
 			</div>
-		</div>
+		</form>
 
-		<div class="create--submit mt-4">Tạo giải đấu</div>
+		<div class="create--submit mt-4" (click)="create()">Tạo giải đấu</div>
 	</div>
 </div>
