--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -88,6 +88,49 @@
 
 	<div class="home--tour-list container">
 		<h2>Giải đấu đang diễn ra</h2>
+		<div class="mat-elevation-z8 mt-4" *ngIf="data.length != 0">
+			<table mat-table [dataSource]="dataSource">
+				<!-- Position Column -->
+				<ng-container matColumnDef="name">
+					<th mat-header-cell *matHeaderCellDef>Tên giải đấu</th>
+					<td mat-cell *matCellDef="let element">
+						{{ element.name }}
+					</td>
+				</ng-container>
+
+				<!-- Name Column -->
+				<ng-container matColumnDef="sportType">
+					<th mat-header-cell *matHeaderCellDef>Môn thi đấu</th>
+					<td mat-cell *matCellDef="let element">
+						{{ element.sportTypeId | sportName }}
+					</td>
+				</ng-container>
+
+				<!-- Weight Column -->
+				<ng-container matColumnDef="formatType">
+					<th mat-header-cell *matHeaderCellDef>Thể loại thi đấu</th>
+					<td mat-cell *matCellDef="let element">
+						{{ element.formatTypeId | formatName }}
+					</td>
+				</ng-container>
+
+				<!-- Symbol Column -->
+				<ng-container matColumnDef="location">
+					<th mat-header-cell *matHeaderCellDef>Địa chỉ</th>
+					<td mat-cell *matCellDef="let element">
+						{{ element.created | date }}
+					</td>
+				</ng-container>
+
+				<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+				<tr
+					mat-row
+					*matRowDef="let row; columns: displayedColumns"></tr>
+			</table>
+		</div>
+		<h4 class="text-center text-white" *ngIf="data.length == 0">
+			Không có giải đấu nào ở hiện tại
+		</h4>
 	</div>
 </div>
 <app-footer></app-footer>
