--- a/client/src/app/pages/home/home.component.scss
+++ b/client/src/app/pages/home/home.component.scss
@@ -1,9 +1,5 @@
 @import "../../shared/variable.scss";
 
-body {
-	background-color: black;
-}
-
 h2 {
 	font-size: 40px;
 	text-align: center;
@@ -17,6 +13,7 @@ h2 {
 		box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 		padding-left: 0;
 		padding-right: 0;
+		font-size: 16px;
 	}
 
 	&--introduce {
@@ -27,12 +24,24 @@ h2 {
 		padding: 24px;
 		background-color: $primary-dark;
 		color: white;
+		text-align: center;
+
+		h3 {
+			font-size: 32px;
+			font-weight: 600;
+		}
+		p {
+			font-size: 18px;
+			font-weight: 500;
+			margin-top: 12px;
+		}
 
 		.input-focus-effect {
 			width: 500px;
 		}
 
 		.search {
+			margin-top: 24px;
 			display: flex;
 			align-items: center;
 		}
