--- a/client/src/app/pages/layout/header/header.component.html
+++ b/client/src/app/pages/layout/header/header.component.html
@@ -42,7 +42,9 @@
 					<li class="dropdown--item" (click)="detailUser()">
 						Thông tin tài khoản
 					</li>
-					<li class="dropdown--item">Giải đấu của tôi</li>
+					<li class="dropdown--item" (click)="myTour()">
+						Giải đấu của tôi
+					</li>
 					<li class="dropdown--item" (click)="logOut()">Đăng xuất</li>
 				</ul>
 			</div>
