--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,12 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./app/shared/breakpoints";
 @import "./app/shared/variable.scss";
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 html,
 body {
 	height: 100%;
 }
 body {
 	margin: 0;
-	font-family: "Roboto", "Helvetica Neue", sans-serif;
+	font-family: "Poppins";
 }
 body::-webkit-scrollbar {
 	width: 4px;
