#13 commit admin login, admin page

--- a/client/src/app/@auth/components/register/register.component.html
+++ b/client/src/app/@auth/components/register/register.component.html
@@ -25,7 +25,15 @@
 						id="email"
 						class="form-control" />
 				</div>
-
+				<div class="form-outline mb-4">
+					<label class="form-label" for="phones">Số điện thoại</label>
+					<input
+						[(ngModel)]="user.phones"
+						name="phones"
+						type="text"
+						id="phones"
+						class="form-control" />
+				</div>
 				<!-- Password input -->
 				<div class="form-outline mb-4">
 					<label class="form-label" for="password">Mật khẩu</label>
