#13 Admin Management, Dashboard

--- a/client/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/src/app/pages/admin/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
 						<i class="fa-solid fa-user"></i>
 					</div>
 					<div class="card--content">
-						<h4 class="card--title">40</h4>
+						<h4 class="card--title">{{ listUser.length }}</h4>
 						<p>Users</p>
 					</div>
 				</div>
