--- a/client/src/app/pages/layout/admin/layout/layout.component.html
+++ b/client/src/app/pages/layout/admin/layout/layout.component.html
@@ -21,7 +21,7 @@
 		<nav class="navbar topbar mb-4 static-top shadow">
 			<ul class="sub-navbar ml-auto d-flex align-items-center gap-2">
 				<p class="fw-bold fs-6">Hi, {{ name }}</p>
-				<div class="action">
+				<!-- <div class="action">
 					<button
 						mat-button
 						color="primary"
@@ -43,7 +43,7 @@
 							Log out
 						</button>
 					</mat-menu>
-				</div>
+				</div> -->
 			</ul>
 		</nav>
 		<div class="h-100">
