#15 update homepages, find-tour pages, pagination tournament

--- a/client/src/app/pages/admin/components/modal-delete/modal-delete.component.html
+++ b/client/src/app/pages/admin/components/modal-delete/modal-delete.component.html
@@ -11,7 +11,7 @@
 					aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p>Modal body text goes here.</p>
+				<p>Can't restore this item ?</p>
 			</div>
 			<div class="modal-footer">
 				<button
