--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -127,11 +127,47 @@
 					</td>
 				</ng-container>
 
-				<!-- Symbol Column -->
 				<ng-container matColumnDef="location">
 					<th mat-header-cell *matHeaderCellDef>Địa chỉ</th>
 					<td mat-cell *matCellDef="let element">
 						{{ element.location }}
+					</td>
+				</ng-container>
+
+				<ng-container matColumnDef="startAt">
+					<th mat-header-cell *matHeaderCellDef>Địa chỉ</th>
+					<td mat-cell *matCellDef="let element">
+						{{ element.created | date }}
+					</td>
+				</ng-container>
+
+				<ng-container matColumnDef="finishAt">
+					<th mat-header-cell *matHeaderCellDef>Ngày bắt đầu</th>
+					<td mat-cell *matCellDef="let element">
+						{{ element.finishAt ?? "-" | date }}
+					</td>
+				</ng-container>
+
+				<ng-container matColumnDef="views">
+					<th mat-header-cell *matHeaderCellDef>Lượt xem</th>
+					<td mat-cell *matCellDef="let element">
+						{{ element.view }}
+					</td>
+				</ng-container>
+
+				<ng-container matColumnDef="actions">
+					<th
+						mat-header-cell
+						*matHeaderCellDef
+						aria-label="row actions"></th>
+					<td mat-cell *matCellDef="let element">
+						<button
+							(click)="onViewDetail(element.id)"
+							mat-stroked-button
+							aria-label="View"
+							matTooltip="Xem chi tiết">
+							<i class="fa-solid fa-eye" aria-hidden="true"></i>
+						</button>
 					</td>
 				</ng-container>
 
