--- a/client/src/app/pages/admin/management-sport-type/management-sport-type.component.html
+++ b/client/src/app/pages/admin/management-sport-type/management-sport-type.component.html
@@ -2,7 +2,7 @@
 	<header class="header--wrapper">
 		<div class="header--top">
 			<h2 class="mb-0">Sport Type</h2>
-			<button mat-raised-button color="warn">
+			<button mat-raised-button color="warn" (click)="openEditDialog(0)">
 				<i class="fa fa-plus-circle px-1" aria-hidden="true"></i> Add
 				new sport
 			</button>
@@ -75,17 +75,37 @@
 					</td>
 				</ng-container>
 
+				<ng-container matColumnDef="actions">
+					<th
+						mat-header-cell
+						*matHeaderCellDef
+						aria-label="row actions"></th>
+					<td mat-cell *matCellDef="let element">
+						<button
+							(click)="openEditDialog(element.id)"
+							mat-stroked-button
+							color="primary"
+							aria-label="Edit"
+							matTooltip="Edit">
+							<i class="fa fa-edit" aria-hidden="true"></i>
+						</button>
+						<button
+							(click)="openDeleteDialog(element.id)"
+							mat-stroked-button
+							color="warn"
+							aria-label="Delete"
+							matTooltip="Delete"
+							class="mx-2">
+							<i class="fa fa-close" aria-hidden="true"></i>
+						</button>
+					</td>
+				</ng-container>
+
 				<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 				<tr
 					mat-row
 					*matRowDef="let row; columns: displayedColumns"></tr>
 			</table>
-
-			<mat-paginator
-				[pageSizeOptions]="[5, 10, 20]"
-				showFirstLastButtons
-				aria-label="Select page of periodic elements">
-			</mat-paginator>
 		</div>
 	</div>
 </div>
