--- a/client/src/app/pages/admin/management-user/management-user.component.html
+++ b/client/src/app/pages/admin/management-user/management-user.component.html
@@ -52,22 +52,14 @@
 					<th
 						mat-header-cell
 						*matHeaderCellDef
-						aria-label="row actions">
-						-
-					</th>
+						aria-label="row actions"></th>
 					<td mat-cell *matCellDef="let element">
-						<button
-							mat-stroked-button
-							aria-label="Edit"
-							matTooltip="Edit"
-							class="mx-1">
-							<i class="fa fa-edit" aria-hidden="true"></i>
-						</button>
 						<button
 							mat-stroked-button
 							color="warn"
 							aria-label="Delete"
-							matTooltip="Delete">
+							matTooltip="Delete"
+							(click)="openDeleteDialog(element.id)">
 							<i class="fa fa-close" aria-hidden="true"></i>
 						</button>
 					</td>
@@ -78,11 +70,14 @@
 					mat-row
 					*matRowDef="let row; columns: displayedColumns"></tr>
 			</table>
-			<mat-paginator
-				[pageSizeOptions]="[5, 10, 20]"
-				showFirstLastButtons
-				aria-label="Select page of periodic elements">
-			</mat-paginator>
+		</div>
+		<div class="table--pagination">
+			<table-pagination
+				[_hasNext]="hasNext"
+				[_hasPrev]="hasPrev"
+				[_currentPage]="currentPage"
+				[_totalPage]="totalPage"
+				(changePage)="onChangePage($event)"></table-pagination>
 		</div>
 	</div>
 </div>
