--- a/client/src/app/pages/layout/admin/layout/layout.component.scss
+++ b/client/src/app/pages/layout/admin/layout/layout.component.scss
@@ -49,10 +49,13 @@
 				.nav-item {
 				}
 				.nav-link {
+					display: grid;
+					grid-template-columns: 20% 80%;
 					font-size: 16px;
 					font-weight: bold;
 					color: rgb(194, 194, 194);
 					i {
+						padding: 0 8px;
 						margin-right: 12px;
 					}
 					&.active {
