--- a/client/src/app/pages/mytour/mytour.component.html
+++ b/client/src/app/pages/mytour/mytour.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="mytour--wrapper container">
 	<div class="mytour--header">
 		<h3>Danh sách giải đấu của bạn</h3>
@@ -73,14 +75,11 @@
 					mat-row
 					*matRowDef="let row; columns: displayedColumns"></tr>
 			</table>
-			<mat-paginator
-				[pageSizeOptions]="[5, 10, 20]"
-				showFirstLastButtons
-				aria-label="Select page of periodic elements">
-			</mat-paginator>
 		</div>
 		<h4 class="text-center text-white" *ngIf="data.length == 0">
 			Không có giải đấu nào ở hiện tại
 		</h4>
 	</div>
 </div>
+
+<app-footer></app-footer>
