--- a/client/src/app/pages/mytour/mytour.component.scss
+++ b/client/src/app/pages/mytour/mytour.component.scss
@@ -1,4 +1,4 @@
-@import "../../../shared/variable.scss";
+@import "../../shared/variable.scss";
 
 .mytour {
 	&--wrapper {
@@ -8,15 +8,15 @@
 	}
 
 	&--header {
-		background-color: $primary;
 		padding: 24px;
 		h3 {
 			margin-bottom: 0;
 			font-size: 35px;
 			font-weight: bold;
-			color: white;
+			color: $primary-dark;
 			text-align: center;
 		}
+		border-bottom: 1px solid #e3e3e3;
 	}
 
 	&--content {
