--- a/client/src/app/pages/create-tournament/create-tournament.component.html
+++ b/client/src/app/pages/create-tournament/create-tournament.component.html
@@ -70,6 +70,7 @@
 				</div>
 			</div>
 			<button
+				mat-button
 				type="button"
 				class="create--submit mt-4"
 				[disabled]="!createTour.valid"
