#15 update UI Stats

--- a/client/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/src/app/pages/admin/dashboard/dashboard.component.html
@@ -41,9 +41,7 @@
 						<i class="bx bx-code-alt"></i>
 					</div>
 					<div class="card--content">
-						<h4 class="card--title">
-							{{ listTour.length }}
-						</h4>
+						<h4 class="card--title">6</h4>
 						<p>Tournament</p>
 					</div>
 				</div>
