--- a/client/src/app/pages/tournament/bracket/bracket-card/form-edit-result/form-edit-result.component.html
+++ b/client/src/app/pages/tournament/bracket/bracket-card/form-edit-result/form-edit-result.component.html
@@ -10,7 +10,7 @@
 	<div class="form-edit__main">
 		<div class="form-group">
 			<p>
-				{{ this.team1!.name ? this.team1!.name : "" }}
+				{{ this.team1.name }}
 			</p>
 			<div class="text-field">
 				<input
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<p class="flex-1">{{ this.team2!.name }}</p>
+			<p class="flex-1">{{ this.team2.name }}</p>
 			<div class="text-field">
 				<input
 					autocomplete="off"
@@ -34,15 +34,15 @@
 	<div class="form-choose">
 		<div
 			class="team--choose"
-			(click)="chooseTeamWin(team1!.id ? team1!.id : 0)"
-			[class.active]="this.teamChoosed === team1!.id">
-			{{ team1!.name }}
+			(click)="chooseTeamWin(team1.id)"
+			[class.active]="this.teamChoosed === team1.id">
+			{{ team1.name }}
 		</div>
 		<div
 			class="team--choose"
-			(click)="chooseTeamWin(team2!.id)"
-			[class.active]="this.teamChoosed === team2!.id">
-			{{ team2!.name }}
+			(click)="chooseTeamWin(team2.id)"
+			[class.active]="this.teamChoosed === team2.id">
+			{{ team2.name }}
 		</div>
 	</div>
 	<div class="form-edit__actions">
