--- a/client/src/app/pages/admin/management-sport-type/management-sport-type.component.html
+++ b/client/src/app/pages/admin/management-sport-type/management-sport-type.component.html
@@ -71,7 +71,7 @@
 				<ng-container matColumnDef="name">
 					<th mat-header-cell *matHeaderCellDef>Name</th>
 					<td mat-cell *matCellDef="let element">
-						{{ element.name }}
+						{{ element.nameVie }}
 					</td>
 				</ng-container>
 
