--- a/client/src/app/pages/home/home.component.scss
+++ b/client/src/app/pages/home/home.component.scss
@@ -91,11 +91,12 @@ h2 {
 		.guide--card {
 			height: 100px;
 			padding: 24px 8px;
-			background-color: $primary-light;
+			background-color: white;
 			position: relative;
 			box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-			border: 2px solid white;
+			border: 2px solid $primary;
 			border-radius: 8px;
+			transition: all 0.2s ease-in;
 			span {
 				position: absolute;
 				content: "";
@@ -111,9 +112,13 @@ h2 {
 				color: white;
 			}
 			p {
-				color: white;
+				color: $primary-dark;
 				font-weight: 450;
 				text-align: center;
+			}
+
+			&:hover {
+				transform: translateY(-5%);
 			}
 		}
 	}
