--- a/client/src/app/pages/tournament/bracket/bracket-card/bracket-card.component.html
+++ b/client/src/app/pages/tournament/bracket/bracket-card/bracket-card.component.html
@@ -1,4 +1,4 @@
-<div class="match">
+<div class="match" *ngIf="match.id !== 0">
 	<div class="match--header">
 		<div class="match--date">
 			{{ match.startAt ? (match.startAt | date) : "" }}
@@ -6,12 +6,12 @@
 		<div class="match--action" *ngIf="this.canEdit">
 			<i
 				(click)="openEditMatch()"
-				class="bx bx-detail fs-4 action--icon"
+				class="fa-solid fa-calendar fs-6 action--icon"
 				matTooltip="Chỉnh sửa"></i>
 
 			<i
 				(click)="openEditResult()"
-				class="bx bxs-edit fs-4 action--icon"
+				class="fa-solid fa-edit fs-6 action--icon"
 				matTooltip="Thêm kết quả"></i>
 		</div>
 	</div>
@@ -19,9 +19,9 @@
 		<div class="match--info">
 			<div
 				class="team--left team"
-				[class.win]="this.team1?.id == this.matchResult?.idTeamWin">
+				[class.win]="this.team1.id == this.matchResult?.idTeamWin">
 				<p class="team--name">
-					{{ this.team1?.name }}
+					{{ this.team1.name }}
 				</p>
 				<p class="team--result">
 					{{ this.matchResult?.scoreT1 ?? 0 }}
@@ -29,9 +29,9 @@
 			</div>
 			<div
 				class="team--right team"
-				[class.win]="this.team2?.id == this.matchResult?.idTeamWin">
+				[class.win]="this.team2.id == this.matchResult?.idTeamWin">
 				<p class="team--name">
-					{{ this.team2?.name }}
+					{{ this.team2.name }}
 				</p>
 				<p class="team--result">
 					{{ this.matchResult?.scoreT2 ?? 0 }}
