--- a/client/src/app/pages/tournament/bracket/bracket-card/form-edit-info/form-edit-info.component.scss
+++ b/client/src/app/pages/tournament/bracket/bracket-card/form-edit-info/form-edit-info.component.scss
@@ -1,1 +1,11 @@
 @import "../../../../../shared/variable.scss";
+
+.choose-teams {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+	p {
+		font-size: 16px;
+		font-weight: bold;
+	}
+}
