--- a/client/src/app/pages/tournament/bracket/bracket.component.scss
+++ b/client/src/app/pages/tournament/bracket/bracket.component.scss
@@ -5,6 +5,9 @@
 		background-color: $white-smoke;
 		padding: 24px 48px;
 		min-height: 100vh;
+		display: flex;
+		flex-direction: column;
+		gap: 24px;
 	}
 
 	&--header {
@@ -22,5 +25,32 @@
 		align-items: center;
 		justify-content: space-evenly;
 		gap: 48px;
+	}
+
+	&--main {
+		display: grid;
+		grid-template-columns: auto auto auto;
+	}
+}
+
+.round-32 {
+	&--wrapper {
+	}
+	&--content {
+		display: grid;
+		grid-template-columns: auto auto auto auto;
+		grid-template-rows: 50% 50%;
+		gap: 12px;
+	}
+}
+
+.round-16 {
+	&--wrapper {
+	}
+	&--content {
+		display: grid;
+		grid-template-columns: auto auto auto auto;
+		grid-template-rows: auto auto auto auto;
+		gap: 24px;
 	}
 }
