--- a/client/src/app/pages/tournament/overview/overview.component.scss
+++ b/client/src/app/pages/tournament/overview/overview.component.scss
@@ -69,7 +69,7 @@
 					right: 12px;
 					transform: translateY(-50%);
 					&:hover {
-						background-color: $primary-light;
+						background-color: #f3f3f3;
 					}
 				}
 
