--- a/client/src/app/pages/tournament/stats/stats.component.scss
+++ b/client/src/app/pages/tournament/stats/stats.component.scss
@@ -1,15 +1,133 @@
 @import "../../../shared/variable.scss";
 
+.dashboard {
+	background-color: $primary;
+	padding: 48px 32px;
+
+	&--header {
+		h3 {
+			font-size: 32px;
+			font-weight: bold;
+			color: white;
+			margin-bottom: 0;
+		}
+		margin-bottom: 24px;
+	}
+
+	&--content {
+		display: grid;
+		grid-template-columns: auto auto auto auto;
+		gap: 12px;
+	}
+
+	&--card {
+		background-color: white;
+		height: 200px;
+		width: 350px;
+		padding: 24px;
+		display: flex;
+		flex-direction: column;
+		border-radius: 8px;
+		.card {
+			&--header {
+				font-size: 20px;
+				font-weight: bold;
+				color: $primary-dark;
+			}
+
+			&--content {
+				display: grid;
+				grid-template-columns: 60% 40%;
+				.info {
+					display: flex;
+					flex-direction: column;
+					gap: 24px;
+					padding: 24px 0px;
+					.main-info {
+						font-size: 52px;
+						font-weight: bold;
+						color: $primary-dark;
+					}
+					.sub-info {
+						font-size: 16px;
+						color: $primary-light;
+					}
+				}
+				.img {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+
+					img {
+						width: 100%;
+					}
+				}
+			}
+		}
+	}
+}
 .stats {
 	&--wrapper {
-		height: 100vh;
 		width: 100%;
 		background-color: $white-smoke;
 		display: grid;
-		grid-template-columns: auto auto;
+		grid-template-columns: auto;
+		grid-template-rows: auto auto auto;
 		padding: 24px 48px;
-		gap: 48px;
-		.history--table {
+		gap: 24px;
+
+		.header {
+			display: inline-block;
+			margin-bottom: 24px;
+			h3 {
+				margin-bottom: 0;
+				font-size: 20px;
+				font-weight: bold;
+				color: $primary-dark;
+			}
+		}
+
+		.team-stats {
+			.team {
+				&--card {
+					width: 200px;
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					gap: 24px;
+					padding: 12px 8px;
+					border-radius: 8px;
+				}
+
+				&--img {
+					width: 100%;
+					object-fit: cover;
+				}
+
+				&--name {
+					font-size: 28px;
+					font-weight: bold;
+					text-align: center;
+				}
+
+				&--content {
+					p {
+						font-size: 16px;
+						margin-bottom: 8px;
+						span {
+							display: inline-block;
+							margin-left: auto;
+							font-weight: bold;
+						}
+					}
+				}
+			}
+		}
+
+		.players-stats {
+		}
+
+		.history {
 		}
 	}
 }
